sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: '(' expected but identifier found.
                  {for (i<-0 to (x-1)) {test=true; if isSmaller(i, (i+1) ) {swap(i, (i+1)); test=false}}}
                                                      ^AlgBubbleSort1:4: error: illegal start of simple expression
                  {for (i<-0 to (x-1)) {test=true; if isSmaller(i, (i+1) ) {swap(i, (i+1)); test=false}}}
                                                                                                       ^