sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort() {var x:Int=getValueCount(); var y:Int=0; var test:Boolean=false
while (!test)
                  {for (i<-0 to (x-1)) {test=true; if isSmaller(i, (i+1) ) {swap(i, (i+1)); test=false}}}



                 }



